refactor : chat get request